# Emfi-test

./: Cargo.toml  README.md  test.txt
src/: handlers.rs  main.rs  models.rs
