[package]
name = "library_api"
version = "0.1.0"
edition = "2018"

[dependencies]
actix = "0.13"      
actix-web = "4.0"  
actix-web-actors = "4.0" 
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"   # Для работы с JSON
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
actix-rt = "2.5"
